--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,10 @@
-Django==1.4
-django-tastypie # API
-django-registration # account logic, views and workflows
-
+Django==1.6
+django-registration==2.1.2
+django-tastypie==0.13.3
+docopt==0.6.2
+docutils==0.12
+gunicorn==19.6.0
+python-dateutil==2.5.3
+python-mimeparse==1.5.2
+six==1.10.0
+wcwidth==0.1.4
